--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html
+	lang="en"
+	dir="ltr"
+>
 	<head>
 		<meta charset="UTF-8" />
 		<meta
@@ -31,6 +34,10 @@
 			rel="stylesheet"
 			href="style.css"
 		/>
+		<script
+			src="script.js"
+			defer
+		></script>
 	</head>
 	<body>
 		<div class="container">
@@ -38,21 +45,30 @@
 				<div class="row">
 					<label class="title">Shapes</label>
 					<ul class="options">
-						<li class="option">
+						<li
+							class="option tool"
+							id="rectangle"
+						>
 							<img
 								src="./icons/rectangle.svg"
 								alt="rectangle-icon"
 							/>
 							<span>Rectangle</span>
 						</li>
-						<li class="option">
+						<li
+							class="option tool"
+							id="circle"
+						>
 							<img
 								src="./icons/circle.svg"
 								alt="circle-icon"
 							/>
 							<span>Circle</span>
 						</li>
-						<li class="option">
+						<li
+							class="option tool"
+							id="triangle"
+						>
 							<img
 								src="./icons/triangle.svg"
 								alt="triangle-icon"
@@ -71,14 +87,20 @@
 				<div class="row">
 					<label class="title">Options</label>
 					<ul class="options">
-						<li class="option">
+						<li
+							class="option active tool"
+							id="brush"
+						>
 							<img
 								src="./icons/brush.svg"
 								alt="brush-icon"
 							/>
 							<span>Brush</span>
 						</li>
-						<li class="option">
+						<li
+							class="option tool"
+							id="eraser"
+						>
 							<img
 								src="./icons/eraser.svg"
 								alt="eraser-icon"
@@ -89,29 +111,37 @@
 							<input
 								type="range"
 								id="size-slider"
+								min="1"
+								max="30"
+								value="5"
 							/>
 						</li>
 					</ul>
 				</div>
-				<div class="row">
+				<div class="row colors">
 					<label class="title">Colors</label>
 					<ul class="options">
 						<li class="option"></li>
+						<li class="option selected"></li>
 						<li class="option"></li>
 						<li class="option"></li>
-						<li class="option"></li>
-						<li class="option"></li>
+						<li class="option">
+							<input
+								type="color"
+								id="color-picker"
+								value="#4A98F7"
+							/>
+						</li>
 					</ul>
 				</div>
-				<div class="row">
-					<button class="clear-canvas">
-						Clear Canvas
-					</button></div>
-					<button class="save-img">
-						Save Image
-					</button></div>
+				<div class="row buttons">
+					<button class="clear-canvas">Clear Canvas</button>
+					<button class="save-img">Save As Image</button>
+				</div>
 			</section>
-			<section class="drawing-board"></section>
+			<section class="drawing-board">
+				<canvas></canvas>
+			</section>
 		</div>
 	</body>
 </html>
