--- a/index.html
+++ b/index.html
@@ -34,10 +34,6 @@
 			rel="stylesheet"
 			href="style.css"
 		/>
-		<script
-			src="script.js"
-			defer
-		></script>
 	</head>
 	<body>
 		<div class="container">
@@ -143,5 +139,6 @@
 				<canvas></canvas>
 			</section>
 		</div>
+		<script src="script.js"></script>
 	</body>
 </html>
